add class : step mole - game - object component

--- a/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj
+++ b/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj
@@ -156,6 +156,7 @@ xcopy "$(ProjectDir)..\vld\bin\Win32\*.*" "$(OutDir)" /D /E /I /F /Y
     <ClCompile Include="..\Classes\step_defender_RootScene.cpp" />
     <ClCompile Include="..\Classes\step_mole_game_ObjectTestScene.cpp" />
     <ClCompile Include="..\Classes\step_mole_game_StageTestScene.cpp" />
+    <ClCompile Include="..\Classes\step_mole_ObjectComponent.cpp" />
     <ClCompile Include="..\Classes\step_mole_RootScene.cpp" />
     <ClCompile Include="..\Classes\step_rain_of_chaos_CollisionCollection.cpp" />
     <ClCompile Include="..\Classes\step_mole_CollisionComponent.cpp" />
@@ -240,6 +241,7 @@ xcopy "$(ProjectDir)..\vld\bin\Win32\*.*" "$(OutDir)" /D /E /I /F /Y
     <ClInclude Include="..\Classes\step_defender_RootScene.h" />
     <ClInclude Include="..\Classes\step_mole_game_ObjectTestScene.h" />
     <ClInclude Include="..\Classes\step_mole_game_StageTestScene.h" />
+    <ClInclude Include="..\Classes\step_mole_ObjectComponent.h" />
     <ClInclude Include="..\Classes\step_mole_RootScene.h" />
     <ClInclude Include="..\Classes\step_rain_of_chaos_CollisionCollection.h" />
     <ClInclude Include="..\Classes\step_mole_CollisionComponent.h" />
