--- a/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj.filters
+++ b/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj.filters
@@ -354,6 +354,9 @@
     <ClCompile Include="..\Classes\step_mole_CircleCollisionComponent.cpp">
       <Filter>src\scene\step_04_mole\circle_collision</Filter>
     </ClCompile>
+    <ClCompile Include="..\Classes\step_mole_animation_InfoContainer.cpp">
+      <Filter>src\scene\step_04_mole\animation</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="main.h">
@@ -613,6 +616,9 @@
     </ClInclude>
     <ClInclude Include="..\Classes\step_mole_CircleCollisionComponent.h">
       <Filter>src\scene\step_04_mole\circle_collision</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\step_mole_animation_InfoContainer.h">
+      <Filter>src\scene\step_04_mole\animation</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
