--- a/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj
+++ b/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj
@@ -157,6 +157,7 @@ xcopy "$(ProjectDir)..\vld\bin\Win32\*.*" "$(OutDir)" /D /E /I /F /Y
     <ClCompile Include="..\Classes\step_mole_animation_InfoContainer.cpp" />
     <ClCompile Include="..\Classes\step_mole_game_ObjectTestScene.cpp" />
     <ClCompile Include="..\Classes\step_mole_game_StageTestScene.cpp" />
+    <ClCompile Include="..\Classes\step_mole_game_StageView.cpp" />
     <ClCompile Include="..\Classes\step_mole_ObjectComponent.cpp" />
     <ClCompile Include="..\Classes\step_mole_RootScene.cpp" />
     <ClCompile Include="..\Classes\step_rain_of_chaos_CollisionCollection.cpp" />
@@ -243,6 +244,7 @@ xcopy "$(ProjectDir)..\vld\bin\Win32\*.*" "$(OutDir)" /D /E /I /F /Y
     <ClInclude Include="..\Classes\step_mole_animation_InfoContainer.h" />
     <ClInclude Include="..\Classes\step_mole_game_ObjectTestScene.h" />
     <ClInclude Include="..\Classes\step_mole_game_StageTestScene.h" />
+    <ClInclude Include="..\Classes\step_mole_game_StageView.h" />
     <ClInclude Include="..\Classes\step_mole_ObjectComponent.h" />
     <ClInclude Include="..\Classes\step_mole_RootScene.h" />
     <ClInclude Include="..\Classes\step_rain_of_chaos_CollisionCollection.h" />
