--- a/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj.filters
+++ b/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj.filters
@@ -192,9 +192,6 @@
     <ClCompile Include="..\Classes\step02_fsm1test_AnimationControlScene.cpp">
       <Filter>src\scene\step_05_defender\fsm1test</Filter>
     </ClCompile>
-    <ClCompile Include="..\Classes\cpg_AnimationComponent.cpp">
-      <Filter>src\animation</Filter>
-    </ClCompile>
     <ClCompile Include="..\Classes\cpg_Animation_Index.cpp">
       <Filter>src\animation</Filter>
     </ClCompile>
@@ -369,6 +366,9 @@
     <ClCompile Include="..\Classes\ui_practice_LayoutNScrollViewScene.cpp">
       <Filter>src\scene\ui_practice</Filter>
     </ClCompile>
+    <ClCompile Include="..\Classes\step_mole_AnimationComponent.cpp">
+      <Filter>src\scene\step_04_mole\animation</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="main.h">
@@ -457,9 +457,6 @@
     </ClInclude>
     <ClInclude Include="..\Classes\step02_fsm1test_AnimationControlScene.h">
       <Filter>src\scene\step_05_defender\fsm1test</Filter>
-    </ClInclude>
-    <ClInclude Include="..\Classes\cpg_AnimationComponent.h">
-      <Filter>src\animation</Filter>
     </ClInclude>
     <ClInclude Include="..\Classes\cpg_Animation_Index.h">
       <Filter>src\animation</Filter>
@@ -640,6 +637,9 @@
     </ClInclude>
     <ClInclude Include="..\Classes\ui_practice_LayoutNScrollViewScene.h">
       <Filter>src\scene\ui_practice</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\step_mole_AnimationComponent.h">
+      <Filter>src\scene\step_04_mole\animation</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
