--- a/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj.filters
+++ b/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj.filters
@@ -641,6 +641,9 @@
     <ClInclude Include="..\Classes\step_mole_AnimationComponent.h">
       <Filter>src\scene\step_04_mole\animation</Filter>
     </ClInclude>
+    <ClInclude Include="..\Classes\step_mole_CircleCollisionComponentConfig.h">
+      <Filter>src\scene\step_04_mole\circle_collision</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="game.rc">
