add scene : ui practice - Minimap

--- a/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj.filters
+++ b/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj.filters
@@ -372,6 +372,9 @@
     <ClCompile Include="..\Classes\ui_practice_UIAndCamera.cpp">
       <Filter>src\scene\ui_practice</Filter>
     </ClCompile>
+    <ClCompile Include="..\Classes\ui_practice_Minimap.cpp">
+      <Filter>src\scene\ui_practice</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="main.h">
@@ -648,6 +651,9 @@
       <Filter>src\scene\step_04_mole\circle_collision</Filter>
     </ClInclude>
     <ClInclude Include="..\Classes\ui_practice_UIAndCamera.h">
+      <Filter>src\scene\ui_practice</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\ui_practice_Minimap.h">
       <Filter>src\scene\ui_practice</Filter>
     </ClInclude>
   </ItemGroup>
