--- a/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj.filters
+++ b/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj.filters
@@ -375,6 +375,9 @@
     <ClCompile Include="..\Classes\ui_practice_Minimap.cpp">
       <Filter>src\scene\ui_practice</Filter>
     </ClCompile>
+    <ClCompile Include="..\Classes\step_mole_game_TargetManager.cpp">
+      <Filter>src\scene\step_04_mole\game</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="main.h">
@@ -626,9 +629,6 @@
     <ClInclude Include="..\Classes\step_mole_game_ObjectTestScene.h">
       <Filter>src\scene\step_04_mole\game</Filter>
     </ClInclude>
-    <ClInclude Include="..\Classes\step_mole_ObjectComponent.h">
-      <Filter>src\scene\step_04_mole\game</Filter>
-    </ClInclude>
     <ClInclude Include="..\Classes\step_mole_CircleCollisionComponent.h">
       <Filter>src\scene\step_04_mole\circle_collision</Filter>
     </ClInclude>
@@ -655,6 +655,12 @@
     </ClInclude>
     <ClInclude Include="..\Classes\ui_practice_Minimap.h">
       <Filter>src\scene\ui_practice</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\step_mole_ObjectComponent.h">
+      <Filter>src\scene\step_04_mole\game</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\step_mole_game_TargetManager.h">
+      <Filter>src\scene\step_04_mole\game</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
