--- a/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj
+++ b/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj
@@ -158,6 +158,7 @@ xcopy "$(ProjectDir)..\vld\bin\Win32\*.*" "$(OutDir)" /D /E /I /F /Y
     <ClCompile Include="..\Classes\step_mole_game_ObjectTestScene.cpp" />
     <ClCompile Include="..\Classes\step_mole_game_StageTestScene.cpp" />
     <ClCompile Include="..\Classes\step_mole_game_StageView.cpp" />
+    <ClCompile Include="..\Classes\step_mole_game_TitleScene.cpp" />
     <ClCompile Include="..\Classes\step_mole_ObjectComponent.cpp" />
     <ClCompile Include="..\Classes\step_mole_RootScene.cpp" />
     <ClCompile Include="..\Classes\step_mole_game_TargetManager.cpp" />
@@ -252,6 +253,7 @@ xcopy "$(ProjectDir)..\vld\bin\Win32\*.*" "$(OutDir)" /D /E /I /F /Y
     <ClInclude Include="..\Classes\step_mole_game_StageConfig.h" />
     <ClInclude Include="..\Classes\step_mole_game_StageTestScene.h" />
     <ClInclude Include="..\Classes\step_mole_game_StageView.h" />
+    <ClInclude Include="..\Classes\step_mole_game_TitleScene.h" />
     <ClInclude Include="..\Classes\step_mole_ObjectComponent.h" />
     <ClInclude Include="..\Classes\step_mole_RootScene.h" />
     <ClInclude Include="..\Classes\step_mole_game_TargetManager.h" />
