add scene : ui_practice - LayoutScene

--- a/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj.filters
+++ b/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj.filters
@@ -387,6 +387,9 @@
     <ClCompile Include="..\Classes\ui_practice_SliderScene.cpp">
       <Filter>src\scene\ui_practice</Filter>
     </ClCompile>
+    <ClCompile Include="..\Classes\ui_practice_LayoutScene.cpp">
+      <Filter>src\scene\ui_practice</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="main.h">
@@ -685,6 +688,9 @@
     </ClInclude>
     <ClInclude Include="..\Classes\helper_BackToThePreviousScene.h">
       <Filter>src\helper</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\ui_practice_LayoutScene.h">
+      <Filter>src\scene\ui_practice</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
