split scene : ui_practice - LayoutVerticalScene

--- a/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj
+++ b/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj
@@ -240,6 +240,7 @@ xcopy "$(ProjectDir)..\vld\bin\Win32\*.*" "$(OutDir)" /D /E /I /F /Y
     <ClCompile Include="..\Classes\step_typetype_sprite_TextureTypeScene.cpp" />
     <ClCompile Include="..\Classes\ui_practice_LayoutNScrollViewScene.cpp" />
     <ClCompile Include="..\Classes\ui_practice_DirectionalLayoutScene.cpp" />
+    <ClCompile Include="..\Classes\ui_practice_LayoutVerticalScene.cpp" />
     <ClCompile Include="..\Classes\ui_practice_Minimap.cpp" />
     <ClCompile Include="..\Classes\ui_practice_RelativeLayoutScene.cpp" />
     <ClCompile Include="..\Classes\ui_practice_SliderScene.cpp" />
@@ -346,6 +347,7 @@ xcopy "$(ProjectDir)..\vld\bin\Win32\*.*" "$(OutDir)" /D /E /I /F /Y
     <ClInclude Include="..\Classes\step_typetype_sprite_TextureTypeScene.h" />
     <ClInclude Include="..\Classes\ui_practice_LayoutNScrollViewScene.h" />
     <ClInclude Include="..\Classes\ui_practice_DirectionalLayoutScene.h" />
+    <ClInclude Include="..\Classes\ui_practice_LayoutVerticalScene.h" />
     <ClInclude Include="..\Classes\ui_practice_Minimap.h" />
     <ClInclude Include="..\Classes\ui_practice_RelativeLayoutScene.h" />
     <ClInclude Include="..\Classes\ui_practice_SliderScene.h" />
