add scene : shader_practice - BasicScene

--- a/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj
+++ b/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj
@@ -151,6 +151,7 @@ xcopy "$(ProjectDir)..\vld\bin\Win32\*.*" "$(OutDir)" /D /E /I /F /Y
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="..\Classes\AppDelegate.cpp" />
+    <ClCompile Include="..\Classes\shader_practice_BasicScene.cpp" />
     <ClCompile Include="..\Classes\shader_practice_GLUniformInfos.cpp" />
     <ClCompile Include="..\Classes\shader_practice_GLUniformInfosScene.cpp" />
     <ClCompile Include="..\Classes\shader_practice_RootScene.cpp" />
@@ -252,6 +253,7 @@ xcopy "$(ProjectDir)..\vld\bin\Win32\*.*" "$(OutDir)" /D /E /I /F /Y
     <ClInclude Include="..\Classes\AppDelegate.h" />
     <ClInclude Include="..\Classes\helper_BackToThePreviousScene.h" />
     <ClInclude Include="..\Classes\helper_SceneMover.h" />
+    <ClInclude Include="..\Classes\shader_practice_BasicScene.h" />
     <ClInclude Include="..\Classes\shader_practice_GLUniformInfos.h" />
     <ClInclude Include="..\Classes\shader_practice_GLUniformInfosScene.h" />
     <ClInclude Include="..\Classes\shader_practice_RootScene.h" />
