--- a/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj.filters
+++ b/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj.filters
@@ -417,6 +417,9 @@
     <ClCompile Include="..\Classes\step_clickclick_game_BlockView.cpp">
       <Filter>src\scene\step_02_clickclick\game</Filter>
     </ClCompile>
+    <ClCompile Include="..\Classes\step_clickclick_game_BlockTestScene.cpp">
+      <Filter>src\scene\step_02_clickclick\game</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="main.h">
@@ -741,6 +744,9 @@
       <Filter>src\scene\shader_practice</Filter>
     </ClInclude>
     <ClInclude Include="..\Classes\step_clickclick_game_BlockView.h">
+      <Filter>src\scene\step_02_clickclick\game</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\step_clickclick_game_BlockTestScene.h">
       <Filter>src\scene\step_02_clickclick\game</Filter>
     </ClInclude>
   </ItemGroup>
